--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             </ul>
         </nav>
         <div class="header__logo">
-            <h1>Zarando</h1>
+            <a href="index.html" class="header__logo"><h1>Zarando</h1></a>
         </div>
         <div class="header__userInteraction">
             <div class="header__userInteraction__container">
-                <button class="header__userInteraction__container__login">Login</button>
-                <button class="header__userInteraction__container__register">Sign up</button>
+                <button class="header__userInteraction__container__login">Iniciar Sesión</button>
+                <button class="header__userInteraction__container__register">Registrarse</button>
             </div>
             <button class="header__userInteraction__shop"><i class="ph ph-shopping-cart-simple"></i></button>
         </div>
@@ -42,11 +42,11 @@
     <!--*-*-*-*-*-*-*-*-*-*-*-*-*-* MAIN *-*-*-*-*-*-*-*-*-*-*-*-*-*-->
     <main id="app">
         <!--*-*-*-*-*-*-*-*-*-*-*-*-*-* PRINCIPAL *-*-*-*-*-*-*-*-*-*-*-*-*-*-->
-        <section v-if="showPrincipal">
+        <section>
             <!--*-*-*-*-*-*-*-*-*-*-*-*-*-* HERO *-*-*-*-*-*-*-*-*-*-*-*-*-*-->
             <section id="hero">
                 <div class="hero__background"></div>
-                <h1>asdasdd</h1>
+                <h2></h2>
             </section>
         </section>
     </main>
