--- a/index.html
+++ b/index.html
@@ -17,26 +17,29 @@
 <body>
     <!--*-*-*-*-*-*-*-*-*-*-*-*-*-* HEADER *-*-*-*-*-*-*-*-*-*-*-*-*-*-->
     <header>
-        <nav class="top-nav header__nav">
-            <input id="menu-toggle" type="checkbox" />
-            <label class='menu-button-container' for="menu-toggle">
-            <div class='menu-button'></div>
-            </label>
-            <ul class="menu">
-                <li class="header__nav__container"><a href="#" class="header__nav__container__link">Mujer</a></li>
-                <li class="header__nav__container"><a href="#" class="header__nav__container__link">Hombre</a></li>
-                <li class="header__nav__container"><a href="#" class="header__nav__container__link">Accesorios</a></li>
-            </ul>
-        </nav>
         <div class="header__logo">
             <a href="index.html" class="header__logo"><h1>Zarando</h1></a>
         </div>
-        <div class="header__userInteraction">
-            <div class="header__userInteraction__container">
-                <button class="header__userInteraction__container__login">Iniciar Sesión</button>
-                <button class="header__userInteraction__container__register">Registrarse</button>
+        <div class="header__interaccion">
+            <nav class="top-nav header__nav">
+                <input id="menu-toggle" type="checkbox" />
+                <label class='menu-button-container' for="menu-toggle">
+                <div class='menu-button'></div>
+                </label>
+                <ul class="menu">
+                    <li class="header__nav__container"><a href="#" class="header__nav__container__link">Mujer</a></li>
+                    <li class="header__nav__container"><a href="#" class="header__nav__container__link">Hombre</a></li>
+                    <li class="header__nav__container"><a href="#" class="header__nav__container__link">Accesorios</a></li>
+                </ul>
+            </nav>
+            
+            <div class="header__userInteraction">
+                <div class="header__userInteraction__container">
+                    <button class="header__userInteraction__container__login">Iniciar Sesión</button>
+                    <button class="header__userInteraction__container__register">Registrarse</button>
+                </div>
+                <button class="header__userInteraction__shop"><i class="ph ph-shopping-cart-simple"></i></button>
             </div>
-            <button class="header__userInteraction__shop"><i class="ph ph-shopping-cart-simple"></i></button>
         </div>
     </header>
     <!--*-*-*-*-*-*-*-*-*-*-*-*-*-* MAIN *-*-*-*-*-*-*-*-*-*-*-*-*-*-->
