--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/hero.css">
     <link rel="stylesheet" href="css/banner.css">
+    <link rel="stylesheet" href="css/rrss.css">
     <link rel="stylesheet" href="css/footer.css">
     
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
@@ -80,6 +81,34 @@
                         <p class="banner__header__contain--text">Tienda de moda y accesorios ONLINE</p>
                     </div>
                 </div>
+            </section>
+            <!--*-*-*-*-*-*-*-*-*-*-*-*-*-* CONTACT *-*-*-*-*-*-*-*-*-*-*-*-*-*-->
+            <section id="contact">
+                <!--*-*-*-*-*-*-*-*-*-*-*-*-*-* RRSS *-*-*-*-*-*-*-*-*-*-*-*-*-*-->
+                <section id="rrss">
+                    <section class="rrss__galery">
+                        <div class="rrss__galery__photo"><img class="rrss__galery__photo__img" src="img/social1.jpg" alt="Contenido social"></div>
+                        <div class="rrss__galery__photo"><img class="rrss__galery__photo__img" src="img/social2.jpg" alt="Contenido social"></div>
+                        <div class="rrss__galery__photo"><img class="rrss__galery__photo__img" src="img/social3.jpg" alt="Contenido social"></div>
+                    </section>
+                    <section class="rrss__content">
+                        <p>Comienza a seguirnos en nuestras redes sociales para poder tener más información y no perderte ninguna <span>OFERTA!!</span></p>
+                        <div class="rrss__content__social">
+                            <a href="facebook.com"><i class="ph-light ph-facebook-logo"></i></a>
+                            <a href="instragram.es"><i class="ph-light ph-instagram-logo"></i></a>
+                            <a href="twitter.es"><i class="ph-light ph-twitter-logo"></i></a>
+                            <a href="youtube.com"><i class="ph-light ph-youtube-logo"></i></a>
+                        </div>
+                    </section>
+                </section>
+                <!--*-*-*-*-*-*-*-*-*-*-*-*-*-* EMAIL *-*-*-*-*-*-*-*-*-*-*-*-*-*-->
+                <section id="personal">
+                    <form action="" method="post">
+                        <label for="news"><h2>SUSCRIBETE A NUESTRO NEWS LETTER</h2></label>
+                        <input type="text" name="" id="news">
+                        <button class="button__purple" type="submit">suscribirse</button>
+                    </form>
+                </section>
             </section>
         </section>
     </main>
