--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         
         <div class="header__userInteraction">
             <div class="header__userInteraction__container">
-                <button class="header__userInteraction__container__login">Iniciar Sesión</button>
-                <button class="header__userInteraction__container__register">Registrarse</button>
+                <button @click="verRegistro()" class="header__userInteraction__container__login">Iniciar Sesión</button>
+                <button @click="verRegistro()" class="header__userInteraction__container__register">Registrarse</button>
             </div>
             <button class="header__userInteraction__shop"><i class="ph ph-shopping-cart-simple"></i></button>
         </div>
@@ -166,6 +166,53 @@
                     </div>
                     <a @click="verDetalle(producto.id)" class="button__purple" href="#">Ver más</a>
                 </article>
+            </section>
+        </section>
+        <!--*-*-*-*-*-*-*-*-*-*-*-*-*-* REGISTRO Y LOGIN *-*-*-*-*-*-*-*-*-*-*-*-*-*-->
+        <section v-if="showRegister" id="login__register">
+            <section>
+                <form action="" method="POST">
+                    <h2>Login</h2>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="text" name="" id="email">
+                    </div>
+                    <div>
+                        <label for="password">Contraseña</label>
+                        <input type="text" name="" id="password">
+                    </div>
+                    <button type="submit">Iniciar Sesión</button>
+                </form>
+            </section>
+            <section>
+                <form action="" method="POST">
+                    <h2>Registro</h2>
+                    <div>
+                        <label for="user">Usuario</label>
+                        <input type="text" name="" id="user">
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="text" name="" id="email">
+                    </div>
+                    <div>
+                        <label for="password">Contraseña</label>
+                        <input type="text" name="" id="password">
+                    </div>
+                    <div>
+                        <label for="password2">Confirmar contraseña</label>
+                        <input type="text" name="" id="password2">
+                    </div>
+                    <div>
+                        <label for="name">Nombre</label>
+                        <input type="text" name="" id="name">
+                    </div>
+                    <div>
+                        <label for="subname">Apellidos</label>
+                        <input type="text" name="" id="subname">
+                    </div>
+                    <button type="submit">Registrarse</button>
+                </form>
             </section>
         </section>
     </main>
