--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/detalle.css">
     <link rel="stylesheet" href="css/footer.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css" rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/e161f36ce9.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <script src="app.js"></script>
 </head>
@@ -93,20 +93,21 @@
                 </div>
                 <section id="banner__slider">
                     <div class="items">
+
                         <div class="item active">
-                            <img src="http://via.placeholder.com/500x500">
+                            <img src="productos[0].img">
                         </div>
                         <div class=" item next">
-                            <img src="http://via.placeholder.com/500x500">
+                            <img src="productos[1].img">
                         </div>
                         <div class="item">
-                            <img src="http://via.placeholder.com/500x500">
+                            <img src="productos[2].img">
                         </div>
                         <div class="item">
-                            <img src="http://via.placeholder.com/500x500">
+                            <img src="productos[3].img">
                         </div>
                         <div class="item prev">
-                            <img src="http://via.placeholder.com/500x500">
+                            <img src="productos[4].img">
                         </div>
                         <div class="button-container">
                             <div class="button"><i class="ri-arrow-left-circle-line"></i></div>
@@ -279,11 +280,11 @@
         </section>
         <section id="footer__info">
             <div class="metodos">
-                <h3>Metodos de pago</h3>
+                <h3>Métodos de pago</h3>
                 <div class="metodos__icon">
-                    <i class="ri-visa-line"></i>
-                    <i class="ri-paypal-line"></i>
-                    <i class="ri-mastercard-line"></i>
+                    <i class="fa-brands fa-cc-visa visa"></i>
+                    <i class="fa-brands fa-cc-paypal paypal"></i>
+                    <i class="fa-brands fa-cc-mastercard mastercard"></i>
                 </div>
             </div>
             <div class="rrss__content__social">
