registro con media

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     </form>
                     <div class="sign-in-div">
                         <span>¿Necesitas una cuenta?</span>
-                        <button class="optional" id="singUp2">Registrate</button>
+                        <button class="optional" id="signUp2">Registrate</button>
                     </div>
                 </div>
                 <div class="overlay-container">
