--- a/index.html
+++ b/index.html
@@ -5,18 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi tienda</title>
     <!--*-*-*-*-*-*-*-*-*-*-*-*-*-* ESTILOS *-*-*-*-*-*-*-*-*-*-*-*-*-*-->
-    <link rel="stylesheet" href="css/normalize.css"> <!-- Básicos -->
-    <link rel="stylesheet" href="css/mediaQuerys.css"> <!-- Media querys -->
-    <link rel="stylesheet" href="css/header.css">  <!-- Header -->
-    <link rel="stylesheet" href="css/nav.css"> <!-- Nav -->
-    <link rel="stylesheet" href="css/registro.css"> <!-- Registro y login -->
-    <link rel="stylesheet" href="css/main.css"> <!-- Main y cosas compartidas -->
-    <link rel="stylesheet" href="css/hero.css"> <!-- Hero -->
-    <link rel="stylesheet" href="css/banner.css"> <!-- Banner -->
-    <link rel="stylesheet" href="css/rrss.css"> <!-- Redes sociales y news letter -->
-    <link rel="stylesheet" href="css/catalogo.css"> <!-- Catálogo -->
-    <link rel="stylesheet" href="css/detalle.css"> <!-- Detalle del producto -->
-    <link rel="stylesheet" href="css/footer.css"> <!-- Footer -->
+    <link rel="stylesheet" href="css/style.css"> <!-- Básicos -->
     
     <!--*-*-*-*-*-*-*-*-*-*-*-*-*-* CDN *-*-*-*-*-*-*-*-*-*-*-*-*-*-->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>  <!-- VUE JS -->
