ajuste imagenes rrss

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="rrss__galery__photo"><img class="rrss__galery__photo__img" src="img/social3.jpg" alt="Contenido social"></div>
                     </section>
                     <section class="rrss__content">
-                        <p>Comienza a seguirnos en nuestras redes sociales para poder tener más información y no perderte ninguna <span>OFERTA!!</span></p>
+                        <h2 class="rrss__content--title">siguenos en nuestras redes sociales</h2>
                         <div class="rrss__content__social">
                             <a href="facebook.com"><i class="ph-light ph-facebook-logo"></i></a>
                             <a href="instragram.es"><i class="ph-light ph-instagram-logo"></i></a>
