--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
                             <a href="#" class="social"><i class="ri-linkedin-fill"></i></a>
                         </div>
                         <span>or use your email for registration</span>
-                        <input type="text" placeholder="Name" />
-                        <input type="email" placeholder="Email" />
-                        <input type="password" placeholder="Password" />
+                        <input type="text" placeholder="Name*" required/>
+                        <input type="email" placeholder="Email*" required/>
+                        <input type="password" placeholder="Password*" required/>
                         <button class="utils">Sign Up</button>
                         <div class="opciones__login sign-up-div">
                             <span>¿Ya tienes una cuenta?</span>
@@ -230,8 +230,8 @@
                             <a href="#" class="social"><i class="ri-linkedin-fill"></i></a>
                         </div>
                         <span>or use your account</span>
-                        <input type="email" placeholder="Email" />
-                        <input type="password" placeholder="Password" />
+                        <input type="email" placeholder="Email*" required/>
+                        <input type="password" placeholder="Password*" required />
                         <a href="#">Forgot your password?</a>
                         <button class="utils utils">Sign In</button>
                         <div class="opciones__login sign-in-div">
